# stablecoin-on-solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md
idls/: stablecoin.json
programs/stablecoin/: Cargo.toml
programs/stablecoin/src/: lib.rs
programs/stablecoin/tests/: test.rs
