[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
# Pin base64ct to avoid edition2024 requirement
base64ct = ">=1.0.0, <1.8.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
