[package]
name = "stablecoin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablecoin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "1.0.0-rc.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0-rc.2", features = ["token_2022", "associated_token"] }

# Pin base64ct to avoid edition2024 requirement
base64ct = ">=1.0.0, <1.8.0"


[dev-dependencies]
litesvm = "0.8"
anchor-litesvm = "0.3.0"
litesvm-utils = "0.3.0"
litesvm-token = "0.8"
solana-sdk = "2.3"
anchor-lang = "1.0.0-rc.2"
spl-associated-token-account = "6.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
